# SyntheticSequenceEvaluation

./: .gitattributes  Makefile  README.md  setup.cfg
Examples/: README.md  generate_example.ipynb  phylogeny.ipynb  sampling-full-train.ipynb  sampling.ipynb
Examples/Dataset_Examples/: visualize_mdh_gpt2_likely-wood-857_vs_2pwz.ipynb
biosynseq/: __init__.py  generate.py  generate_test.py  metrics.py  run_alphafold.py  visualize.py
data/: MDH.selected.GB.xlsx  README.md
data/phylogeny/msa_aln/: likely-wood-857-gen-normal-1.aln  likely-wood-857-gen-normal-2.aln  likely-wood-857-gen-normal.aln  likely-wood-857-gen-sample.aln  likely-wood-857-val_100.aln  likely-wood-857-val_1000.aln
data/phylogeny/tree_and_xml/: mdh-tree-gen-embed.tree  mdh-tree-gen-embed.xml  mdh-tree-gen-sample-embed.tree  mdh-tree-gen-sample-embed.xml  mdh-tree-gen-sample-normal-1.tree  mdh-tree-gen-sample-normal-1.xml  mdh-tree-gen-sample-normal-2.tree  mdh-tree-gen-sample-normal-2.xml  mdh-tree-gen-sample-normal.tree  mdh-tree-gen-sample-normal.xml  mdh-tree-val-embed_1000_1.tree  mdh-tree-val-embed_1000_1.xml  mdh-tree-val-embed_100_1.tree  mdh-tree-val-embed_100_1.xml  mdh-tree-val_100_2.tree  mdh-tree-val_100_2.xml
notebooks/: README.md  UMAP_analysis.ipynb  visualize1-Copy3.ipynb  visualize_PairwiseAligner.ipynb  visualize_pairwise2.ipynb
requirements/: dev.txt  requirements.txt
