[metadata]
name = biosynseq
version = attr: biosynseq.__version__
description = Pipeline to evaluate synthetic sequences.
long_description = file:README.md
long_description_content_type=text/markdown

url = https://github.com/ramanathanlab/SyntheticSequenceEvaluation
author = Diangen Lin, Alexander Brace, Maxim Zvyagin, Arvind Ramanathan
author_email = ramanathana@anl.gov

[options]
packages = find:
python_requires = >=3.6


[options.packages.find]
exclude =
    tests
    docs

[flake8] 
exclude = .git
max-line-length = 118
extend-ignore = E203,W503,E501,E302,E231
max-complexity = 14

[tool:pytest]
# https://docs.pytest.org/en/stable/customize.html
addopts = -x
junit_family=xunit1
filterwarnings =
    ignore::DeprecationWarning

[mypy]
show_error_codes = True
check_untyped_defs = True
follow_imports = normal
strict_optional = True
plugins = pydantic.mypy
strict = True
disallow_untyped_defs = True
disable_error_code = override

[mypy-tqdm.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-Bio.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-cuml.*]
ignore_missing_imports = True

[mypy-matplotlib.*]
ignore_missing_imports = True

[mypy-gene_transformer.*]
ignore_missing_imports = True
